--- a/dotnetwithazuretable.Console/dotnetwithazuretable.Console/dotnetwithazuretable.Console.csproj
+++ b/dotnetwithazuretable.Console/dotnetwithazuretable.Console/dotnetwithazuretable.Console.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Data.Tables" Version="12.7.1" />
+    <PackageReference Include="Microsoft.Web.WebJobs.Publish" Version="17.1.361" />
   </ItemGroup>
 
   <ItemGroup>
