--- a/dotnetwithazuretable.Api/dotnetwithazuretable.Api/dotnetwithazuretable.Api.csproj
+++ b/dotnetwithazuretable.Api/dotnetwithazuretable.Api/dotnetwithazuretable.Api.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Azure.Data.Tables" Version="12.7.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
